# paf

./: Cargo.toml  README.md
migrations/: 20240307001820_create_countries_table.sql  20240307001840_create_cities_table.sql  20240307035323_create_postcodes_table.sql  20240307035405_create_states_table.sql  20240307065043_create_languages_table.sql  20240307065345_create_interface_languages_table.sql  20240307074941_create_rates_table.sql
src/: lib.rs  main.rs  routes.rs
src/db/: conn.rs  migrate.rs  mod.rs
src/domain/: currency.rs
src/handlers/: country_handler.rs  language_handler.rs  mod.rs  rate_handler.rs
src/models/: city.rs  country.rs  language.rs  mod.rs  postcode.rs  rate.rs
src/schedulers/: mod.rs  rate_scheduler.rs
