[package]
name = "paf_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
bigdecimal = "0.4.3"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-tz = "0.8.6"
cron = "0.12.1"
csv = "1.3.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "macros", "postgres", "migrate", "json", "bigdecimal"] }   
tokio = { version = "1.36.0", features = ["full"] }
